// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error handling Snyk fix returns error when called with unsupported type 1`] = `
Object {
  "exceptionsByScanType": Object {
    "npm": Array [
      [UnsupportedTypeError: Provided scan type is not supported],
    ],
  },
  "resultsByPlugin": Object {},
}
`;

exports[`Error handling Snyk fix returns error when called with unsupported type 2`] = `"Error G10 (UnsupportedTypeError) npm is not supported."`;

exports[`Error handling Snyk fix throws error when called with unsupported type 1`] = `"Error G10 (UnsupportedTypeError) npm is not supported."`;

exports[`Snyk fix Snyk fix returns results for supported & unsupported type 1`] = `
Object {
  "exceptionsByScanType": Object {},
  "resultsByPlugin": Object {
    "python": Object {
      "failed": Array [],
      "skipped": Array [
        Object {
          "scanResult": Object {
            "facts": Array [
              Object {
                "data": "not-implemented",
                "type": "not-implemented",
              },
            ],
            "identity": Object {
              "targetFile": "Pipfile",
              "type": "pip",
            },
          },
          "testResult": Object {
            "depGraphData": "",
            "issues": Array [
              Object {
                "fixInfo": Object {},
                "issueId": "VULN_ID_1",
                "pkgName": "package@version",
              },
            ],
            "issuesData": Object {
              "vuln-id": Object {
                "id": "VULN_ID_1",
                "severity": "high",
                "title": "Fake vuln",
              },
            },
            "remediation": Object {
              "ignore": Object {},
              "patch": Object {},
              "pin": Object {},
              "unresolved": Array [],
              "upgrade": Object {},
            },
          },
          "workspace": Object {
            "readFile": [Function],
            "writeFile": [Function],
          },
        },
      ],
      "succeeded": Array [
        Object {
          "scanResult": Object {
            "facts": Array [
              Object {
                "data": "not-implemented",
                "type": "not-implemented",
              },
            ],
            "identity": Object {
              "targetFile": "requirements.txt",
              "type": "pip",
            },
          },
          "testResult": Object {
            "depGraphData": "",
            "issues": Array [
              Object {
                "fixInfo": Object {},
                "issueId": "VULN_ID_1",
                "pkgName": "package@version",
              },
            ],
            "issuesData": Object {
              "vuln-id": Object {
                "id": "VULN_ID_1",
                "severity": "high",
                "title": "Fake vuln",
              },
            },
            "remediation": Object {
              "ignore": Object {},
              "patch": Object {},
              "pin": Object {},
              "unresolved": Array [],
              "upgrade": Object {},
            },
          },
          "workspace": Object {
            "readFile": [Function],
            "writeFile": [Function],
          },
        },
      ],
    },
  },
}
`;

exports[`Snyk fix Snyk fix returns results for supported type 1`] = `
Object {
  "exceptionsByScanType": Object {},
  "resultsByPlugin": Object {
    "python": Object {
      "failed": Array [],
      "skipped": Array [],
      "succeeded": Array [
        Object {
          "scanResult": Object {
            "facts": Array [
              Object {
                "data": "not-implemented",
                "type": "not-implemented",
              },
            ],
            "identity": Object {
              "targetFile": "requirements.txt",
              "type": "pip",
            },
          },
          "testResult": Object {
            "depGraphData": "",
            "issues": Array [
              Object {
                "fixInfo": Object {},
                "issueId": "VULN_ID_1",
                "pkgName": "package@version",
              },
            ],
            "issuesData": Object {
              "vuln-id": Object {
                "id": "VULN_ID_1",
                "severity": "high",
                "title": "Fake vuln",
              },
            },
            "remediation": Object {
              "ignore": Object {},
              "patch": Object {},
              "pin": Object {},
              "unresolved": Array [],
              "upgrade": Object {},
            },
          },
          "workspace": Object {
            "readFile": [Function],
            "writeFile": [Function],
          },
        },
      ],
    },
  },
}
`;
